Fix a bug with the style of the app, before when putting so many tasks that you had to scroll the layout broke, now is fixed.

--- a/index.css
+++ b/index.css
@@ -33,8 +33,10 @@ body {
 #app {
   display: grid;
   grid-template-columns: 300px minmax(640px, calc(100vw - 300px));
-  grid-template-rows: 50px minmax(480px, calc(100vh - 50px));
+  grid-template-rows: 50px 1fr;
   grid-template-areas: 
   "header header"
   "sidebar page";
+  
+  height: 100vh;
 }
