--- a/src/views/Layouts/main/mainPage.css
+++ b/src/views/Layouts/main/mainPage.css
@@ -1,6 +1,7 @@
 .main {
     padding: 20px 20px;
     background-color: var(--color-main);
+    height: auto;
 }
 
 .main h2, .main h3, .main p {
@@ -17,6 +18,7 @@
     margin-bottom: 5px;
 }
 
+/* ADD TASK BAR */
 .main__addTaskDiv {
     display: flex;
     gap: 10px;
@@ -59,60 +61,60 @@
         text-shadow: 5px 5px 10px black;
     }
 
-.main__task{
-    background-color: var(--color-secondary);
-    min-height: 40px;
-
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 15px;
-
-    border-radius: 5px;
-
-    padding: 10px 20px;
-}
-
+/* TASK LIST */
 .main__taskList {
     display: flex;
     flex-direction: column;
 
     gap: 5px;
 }
+    .main__task{
+        background-color: var(--color-secondary);
+        min-height: 40px;
 
-    .main__taskIcon {
-        width: 20px;
-        height: 20px;
-        border: 1px solid black;
-        border-radius: 50%;
-        cursor: pointer;
-        flex-shrink: 0;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 15px;
+
+        border-radius: 5px;
+
+        padding: 10px 20px;
     }
 
-    .main__taskText {
-        max-width: 85%;
-        overflow-wrap: break-word;
-        margin: 0;
-    }
+        .main__taskIcon {
+            width: 20px;
+            height: 20px;
+            border: 1px solid black;
+            border-radius: 50%;
+            cursor: pointer;
+            flex-shrink: 0;
+        }
 
-    .main__taskDate {
-        flex-shrink: 0;
-        margin-left: auto;
-    }
+        .main__taskText {
+            max-width: 85%;
+            overflow-wrap: break-word;
+            margin: 0;
+        }
 
-    .main__taskDelete {
-        height: 22px;
-        background-color: inherit;
-        border: none;
-    
-        padding: 0px 5px;
-    
-        cursor: pointer;
-        color: var(--color-negative);
+        .main__taskDate {
+            flex-shrink: 0;
+            margin-left: auto;
+        }
 
-        text-shadow: 0px 0px 1px #000;
-    }
+        .main__taskDelete {
+            height: 22px;
+            background-color: inherit;
+            border: none;
+        
+            padding: 0px 5px;
+        
+            cursor: pointer;
+            color: var(--color-negative);
 
-    .main__taskDelete:hover {
-        color: var(--color-delete-hover);
-    }
+            text-shadow: 0px 0px 1px #000;
+        }
+
+        .main__taskDelete:hover {
+            color: var(--color-delete-hover);
+        }
